# ambient-crt

./: .gitignore  Cargo.toml  readme.md
assets/: index.html  script.js  styles.css
src/: main.rs  media_keys.rs  playlist.rs  thumbnails.rs  vlc_manager.rs  web_manager.rs  web_util.rs
templates/: panel.html
